# stage3

./: local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/offlineroutingapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  masaar_core.cpp  masaar_core.h  masaar_jni.cpp  offlineroutingapp.cpp
app/src/main/java/com/example/offlineroutingapp/: ChatActivity.kt  MainActivity.kt  Message.kt  MessageAdapter.kt  PacketReceive.kt  PacketSender.kt  RegistrationActivity.kt  RoutingPacket.kt
app/src/main/java/com/example/offlineroutingapp/adapters/: ChatListAdapter.kt  ViewPagerAdapter.kt
app/src/main/java/com/example/offlineroutingapp/data/: AppDatabase.kt
app/src/main/java/com/example/offlineroutingapp/data/dao/: ChatDao.kt  MessageDao.kt  (+1 more)
app/src/main/java/com/example/offlineroutingapp/fragments/: ChatsFragment.kt  DiscoverFragment.kt  ProfileFragment.kt
app/src/main/java/com/example/offlineroutingapp/service/: WifiDirectService.kt
app/src/main/java/nativebridge/: MasaarBridge.kt
app/src/main/res/drawable/: bg_message_received.xml  bg_message_sent.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  activity_main_tabbed.xml  activity_registration.xml  fragment_chats.xml  fragment_discover.xml  fragment_profile.xml  item_chat.xml  item_message.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/offlineroutingapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
